test/classes/delete-free/tests-from-design-overview/generic-collection-borrowed-int-error.good
generic-collection-borrowed-int-error.chpl:11: In function 'test':
generic-collection-borrowed-int-error.chpl:14: error: unresolved type specifier 'Collection(type int(64))'
generic-collection-borrowed-int-error.chpl:3: note: candidates are: Collection(type element)
